--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,9 @@
   "hexo": {
     "version": "3.9.0"
   },
+  "scripts": {
+    "test": "hexo clean && hexo deploy"
+  },
   "dependencies": {
     "hexo": "^3.9.0",
     "hexo-deployer-git": "^2.0.0",
