--- a/app/_config.yml
+++ b/app/_config.yml
@@ -79,6 +79,6 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
 - type: git
-  repo: git@github.com:CatzillaOrz/catzilla_githubio_repo.git
+  repo: https://github.com/CatzillaOrz/catzillaorz.github.io.git
   branch: master #published
   message:
