--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ before_script:
   - cd app
   - npm install -g hexo-cli
   - npm install hexo
-  --add --chmod=+x hexo generate
-  --add --chmod=+x hexo clean
-  --add --chmod=+x hexo deploy
-  - hexo generate
+  - chmod +x hexo generate
+  - chmod +x hexo clean
+  - chmod +x hexo deploy
   - npm install hexo-deployer-git --save
 script: npm test
