--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: node_js
 node_js:
   - "10"
 before_script:
+  - chmod +x app
   - cd app
   - npm install -g hexo-cli
   - npm install hexo
