--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ language: node_js
 node_js:
   - "10"
 before_script:
+  - git update-index --add --chmod=+x app
   - chmod +x app
   - cd app
   - npm install -g hexo-cli
   - npm install hexo
-  - chmod +x hexo generate
-  - chmod +x hexo clean
-  - chmod +x hexo deploy
   - npm install hexo-deployer-git --save
 script: npm test
