--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,22 @@
 dist: app
 language: node_js
 node_js:
-  - "10"
+- '10'
 before_script:
-  - chmod +x app
-  - cd app
-  - npm install -g hexo-cli
-  - npm install hexo
-  - npm install hexo-deployer-git --save
-script: hexo clean && hexo deploy
+- chmod +x app
+- cd app
+- openssl aes-256-cbc -K $encrypted_cb40dc9c0807_key -iv $encrypted_cb40dc9c0807_iv
+  -in id_rsa_travis.enc -out id_rsa_travis -d
+- eval $(ssh-agent)
+- ssh-add ~/.ssh/id_rsa_travis
+- cp ssh_config ~/.ssh/config
+- git config --global user.name "CatzillaOrz""
+- git config --global user.email catzillaorz@outlook.com
+install:
+- npm install hexo-cli -g
+- npm install hexo --save
+- npm install
+script:
+- hexo clean
+- hexo g
+- hexo d
