--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: node_js
 node_js:
   - '10'
 before_script:
-  - chmod +x app
-  - cd app
+  # - chmod +x app
+  # - cd app
   - openssl aes-256-cbc -K $encrypted_cb40dc9c0807_key -iv $encrypted_cb40dc9c0807_iv
     - in id_rsa_travis.enc -out id_rsa_travis -d
   - eval $(ssh-agent)
