--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
-dist: app
 language: node_js
 node_js:
   - '10'
 before_script:
-  # - chmod +x app
-  # - cd app
   - openssl aes-256-cbc -K $encrypted_cb40dc9c0807_key -iv $encrypted_cb40dc9c0807_iv
     - in id_rsa_travis.enc -out id_rsa_travis -d
   - eval $(ssh-agent)
@@ -13,12 +10,11 @@ before_script:
   - git config --global user.name "CatzillaOrz""
   - git config --global user.email catzillaorz@outlook.com
 install:
-  - cd app
   - npm install hexo-cli -g
+  - npm install hexo-generator-feed --save
   - npm install hexo --save
   - npm install
 script:
-  - cd app
   - hexo clean
   - hexo g
   - hexo d
