--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 node_js:
   - '10'
 before_script:
-  - openssl aes-256-cbc -K $encrypted_cb40dc9c0807_key -iv $encrypted_cb40dc9c0807_iv
-    -in id_rsa_travis.enc -out id_rsa_travis -d
+  - openssl aes-256-cbc -K $encrypted_cb40dc9c0807_key -iv $encrypted_cb40dc9c0807_iv -in id_rsa_travis.enc -out id_rsa_travis -d
   - eval $(ssh-agent)
   - ssh-add ~/.ssh/id_rsa_travis
   - cp ssh_config ~/.ssh/config
