--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: node_js
 node_js:
-  - '10'
-before_script:
-  - openssl aes-256-cbc -K $encrypted_cb40dc9c0807_key -iv $encrypted_cb40dc9c0807_iv -in id_rsa_travis.enc -out id_rsa_travis -d
-  - eval $(ssh-agent)
-  - ssh-add ~/.ssh/id_rsa_travis
-  - cp ssh_config ~/.ssh/config
-  - git config --global user.name "CatzillaOrz""
-  - git config --global user.email catzillaorz@outlook.com
+- '10'
+
 install:
-  - npm install hexo-cli -g
-  - npm install hexo-generator-feed --save
-  - npm install hexo --save
-  - npm install
+- npm install hexo-cli -g
+- npm install hexo-generator-feed --save
+- npm install hexo --save
+- npm install
 script:
-  - hexo clean
-  - hexo g
-  - hexo d
+- hexo clean
+- hexo g
+- hexo d
+before_install:
+- openssl aes-256-cbc -K $encrypted_1a7646e82260_key -iv $encrypted_1a7646e82260_iv
+  -in id_rsa_travis.enc -out id_rsa_travis -d
+- eval $(ssh-agent)
+- ssh-add ~/.ssh/id_rsa_travis
+- cp ssh_config ~/.ssh/config
+- git config --global user.name "CatzillaOrz""
+- git config --global user.email catzillaorz@outlook.com
