--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ script:
 - hexo clean
 - hexo g
 - hexo d
-before_install:
-- gem install fir-cli
-- openssl aes-256-cbc -K $encrypted_1a7646e82260_key -iv $encrypted_1a7646e82260_iv
-  -in id_rsa_travis.enc -out id_rsa_travis -d
-- eval $(ssh-agent)
-- ssh-add ~/.ssh/id_rsa_travis
-- cp ssh_config ~/.ssh/config
-- git config --global user.name "CatzillaOrz""
-- git config --global user.email catzillaorz@outlook.com
+# before_install:
+# - gem install fir-cli
+# - openssl aes-256-cbc -K $encrypted_1a7646e82260_key -iv $encrypted_1a7646e82260_iv
+  # -in id_rsa_travis.enc -out id_rsa_travis -d
+# - eval $(ssh-agent)
+# - ssh-add ~/.ssh/id_rsa_travis
+# - cp ssh_config ~/.ssh/config
+# - git config --global user.name "CatzillaOrz""
+# - git config --global user.email catzillaorz@outlook.com
