modify redirect url path

--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -1,8 +1,8 @@
 # Header
 menu:
-  Home: /
+  Home: /tags/GFW/
   Archives: /archives
-rss: /atom.xml
+rss: /archives/
 
 # Content
 excerpt_link: Read More
