--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ pagination_dir: page
 theme: landscape
 
 menu:
-  Home: /tags/GFW/
+  Home: /2019/09/17/翻墙/
   Archives: /archives
 rss: /archives/
 
