--- a/_config.yml
+++ b/_config.yml
@@ -87,3 +87,22 @@ deploy:
   repo: git@github.com:CatzillaOrz/catzillaorz.github.io.git
   branch: master #published
   message:
+
+jsonContent:
+  meta: false
+  pages: false
+  posts:
+    title: true
+    date: true
+    path: true
+    text: false
+    raw: false
+    content: false
+    slug: false
+    updated: false
+    comments: false
+    link: false
+    permalink: false
+    excerpt: false
+    categories: false
+    tags: true
