--- a/_config.yml
+++ b/_config.yml
@@ -73,15 +73,13 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: yilia-plus
+theme: landscape
 
 menu:
   Home: /
   Archives: /archives
 rss: /archives/
 
-# 网站图标
-favicon: https://joeybling.github.io/favicon.ico
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
