--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ branches:                     # 指定要构建的分支
 
 before_install:               # install 阶段之前执行
   - npm install -g hexo-cli   # 全局安装 Hexo 命令行工具
+  - git git clone https://github.com/shixiaohu2206/hexo-theme-huhu.git themes/hexo-theme-huhu
 
 install:                      # 在安装项目环境阶段需要运行的命令，一条一行，类似的还有 before_install
   - npm install               # 安装 package.json 中的依赖
@@ -21,6 +22,7 @@ script:                       # 在构建阶段需要运行的命令，一条一
   - hexo generate             # Hexo 常规命令，执行清理和生成
 
 after_success:                # script 阶段成功时执行，构建失败不会执行，其他同上
+  - sed -i 's/theme: landscape/theme: hexo-theme-huhu/g' _config.yml
   - git config --local user.name "catzilla"
   - git config --local user.email "catzilla@outlook.com"
   - sed -i'' "s~git@github.com:~https://${GITHUB_REPO_TOKEN}@github.com/~" _config.yml
