--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:                     # 指定要构建的分支
 
 before_install:               # install 阶段之前执行
   - npm install -g hexo-cli   # 全局安装 Hexo 命令行工具
-  # - git clone https://github.com/shixiaohu2206/hexo-theme-huhu.git themes/hexo-theme-huhu
+  - git clone https://github.com/shixiaohu2206/hexo-theme-huhu.git themes/hexo-theme-huhu
 
 install:                      # 在安装项目环境阶段需要运行的命令，一条一行，类似的还有 before_install
   - npm install               # 安装 package.json 中的依赖
