--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+# theme: landscape
+theme: hexo-theme-huhu
 
 # menu:
 #   Home: /
@@ -115,8 +116,6 @@ menu:
   tags: /tags
   friends: /friends
   about: /about
-
-logo: /theme/avtar.JPG
 
 theme_config:
   #logo
