--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:                       # 在构建阶段需要运行的命令，一条一
   - sed -i'' "s~landscape~hexo-theme-huhu/~" _config.yml                                                  #替换主题
   - hexo clean
   - hexo generate             # Hexo 常规命令，执行清理和生成
-  - find -mindepth 2 -name 'index.html' -exec sed -i'' "s~images/logo.jpeg~theme/avatar.JPG~" {} +                         #替换logo
+  - find -maxdepth 3 -mindepth 2 -name 'index.html' -exec sed -i'' "s~images/logo.jpeg~theme/avatar.JPG~" {} +                         #替换logo
 
 
 after_success:                # script 阶段成功时执行，构建失败不会执行，其他同上
