--- a/_config.yml
+++ b/_config.yml
@@ -35,13 +35,19 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
+# highlight:
+#   enable: true
+#   line_number: true
+#   auto_detect: false
+#   tab_replace:
 highlight:
   enable: true
-  line_number: true
-  auto_detect: false
+  hljs: true #新增hljs参数，并设为true，不然无法使用highlight.js 官方的 css
+  line_number: false #暂不支持行号
+  auto_detect: false #这一项也关闭，若开启有可能报错
   tab_replace:
 
 # Home page setting
@@ -113,7 +119,7 @@ menu:
 
 theme_config:
   #logo
-  logo: /theme/avtar.JPG
+  logo: /theme/avatar.JPG
 
   #categories-max
   categories_max: 5
@@ -140,10 +146,3 @@ theme_config:
       url: 'https://www.donlex.cn/'
       logo: 'https://www.donlex.cn/images/avatar.png'
       intro: '码农'
-
-  highlight:
-    enable: true
-    hljs: true #新增hljs参数，并设为true，不然无法使用highlight.js 官方的 css
-    line_number: false #暂不支持行号
-    auto_detect: false #这一项也关闭，若开启有可能报错
-    tab_replace:
