--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,7 @@ menu:
   archives: /archives
   categories: /categories
   tags: /tags
+  Gallery: /gallery
   friends: /friends
   about: /about
 
