--- a/_config.yml
+++ b/_config.yml
@@ -133,8 +133,8 @@ theme_config:
 
   #reward
   reward:
-    weixin: '/q3velv3hp.bkt.gdipper.com/github/blog/img/alipay.jpeg'
-    zhifubao: '/q3velv3hp.bkt.gdipper.com/github/blog/img/wxpay.jpeg'
+    weixin: '/theme/alipay.jpeg'
+    zhifubao: '/theme/wxpay.jpeg'
 
   friends:
     - name: V2EX
