--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:
 keywords:
 author: catzillaorz
 language: en
-timezone: en-US
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
