--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:                       # 在构建阶段需要运行的命令，一条一
   - sed -i'' "s~landscape~hexo-theme-huhu/~" _config.yml                                                  #替换主题
   - hexo clean
   - hexo generate             # Hexo 常规命令，执行清理和生成
-  - find -maxdepth 7 -mindepth 2 -name 'index.html' -exec sed -i'' "s~images/logo.jpeg~/raw.githubusercontent.com/CatzillaOrz/imgcdn/master/vsc_img/avatar2020-05-03.JPG~" {} +   #替换logo
+  - find -maxdepth 7 -mindepth 2 -name 'index.html' -exec sed -i'' "s~images/logo.jpeg~/cdn.jsdelivr.net/gh/catzillaorz/imgcdn/vsc_img/avatar2020-05-03.JPG~" {} +   #替换logo
   - find -maxdepth 2 -mindepth 2 -name 'index.html' -exec sed -i'' 's~<head>~<head><meta name="google-site-verification" content="_y3PGYn8yfOAyB50FziwyvBRF4_UYE90h2hnzhNl7vs" />~' {} +   #提交搜索引擎
 
 
